connected auth button to redirect 🚀

--- a/client/src/pages/Cart.css
+++ b/client/src/pages/Cart.css
@@ -1,5 +1,5 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css");
-@import url("https://fonts.googleapis.com/css?family=Biryani:600,700,400|Rozha+One:400|Inter:700,400");
+@import url("https://fonts.googleapis.com/css?family=Biryani:600,700,400|Inter:700,400");
 * {
   box-sizing: border-box;
 }
